CB-20488: Roll forward should detect and not fail on newer parcel version
In this commit I've fixed the handling of the case gracefully when one parcel present in CB metadata is missing from CM (e.g. customer deleted it) but there is a newer version of that parcel already installed and activated.